Fixed the display of calendar events (e.g. xmas day) to use a <div> at the top of the day cell rather than a cell, which was causing display problems from empty cells not being drawn and this creating a gap at the top of "non-special" days which also broke borders.

--- a/public_html/stylesheets/listings.css
+++ b/public_html/stylesheets/listings.css
@@ -150,4 +150,13 @@
 	color: #ffffff;
 	background-color: #ff6a00;
 }
+
+.calviewEBCSpecialDayHeading {
+	text-align: center;
+	font-size: 10px;
+	background-color: #f9f9f9;
+	border-bottom: 1px solid #cccccc;
+	margin: 0px;
+	padding: 2px;
+}
 /* -- 	END LISTINGS CALENDAR VIEW CLASSES -- */
